[package]
name = "rust_lib_wlist_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies.flutter_rust_bridge]
version = "=2.5.0"
default-features = false
features = [
    "rust-async",
    "dart-opaque",
    "thread-pool",
    "anyhow",
    "chrono",
]

[dependencies]
wlist_native = { path = "wlist_native" }
anyhow = "^1.0"

# common
o2o = "~0.4"
thiserror = "^1.0"
chrono = "~0.4"
indexmap = "^2.6"
hashbrown = "~0.15"
# core
either = "^1.13"
tokio = { version = "^1.40", features = ["macros"] }
bytes = "^1.7"
memmap2 = "~0.9"
